<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.prosilion</groupId>
  <artifactId>barchetta</artifactId>
  <version>0.0.3-SNAPSHOT</version>
  <name>barchetta</name>
  <description>Smart-Contract Negotation Framework</description>
  <packaging>war</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.4</version>
  </parent>

  <properties>
    <java.version>22</java.version>
    <commons-io.version>2.13.0</commons-io.version>
    <guava.version>32.1.2-jre</guava.version>
    <h2.version>2.2.224</h2.version>
    <mysql-connector-j.version>9.1.0</mysql-connector-j.version>
    <lombok.version>1.18.32</lombok.version>
    <nostr-java.version>0.6.1-SNAPSHOT</nostr-java.version>
    <presto.nostr.version>0.0.3-SNAPSHOT</presto.nostr.version>
    <snakeyaml.version>2.2</snakeyaml.version>
    <thymeleaf-extras-springsecurity6.version>3.1.2.RELEASE</thymeleaf-extras-springsecurity6.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>nostr-java</groupId>
      <artifactId>nostr-java-api</artifactId>
      <version>${nostr-java.version}</version>
    </dependency>
    <dependency>
      <groupId>com.prosilion.presto.starter</groupId>
      <artifactId>core</artifactId>
      <version>${presto.nostr.version}</version>
    </dependency>
    <dependency>
      <groupId>com.prosilion.presto.starter</groupId>
      <artifactId>web</artifactId>
      <version>${presto.nostr.version}</version>
    </dependency>
    <dependency>
      <groupId>com.prosilion.presto.starter</groupId>
      <artifactId>nostr</artifactId>
      <version>${presto.nostr.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <version>${parent.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-websocket</artifactId>
      <version>${parent.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-tomcat</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <version>${parent.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
      <version>${parent.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <version>${parent.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
      <version>${parent.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <version>${parent.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
      <version>${parent.version}</version>
    </dependency>
    <dependency>
      <groupId>org.thymeleaf.extras</groupId>
      <artifactId>thymeleaf-extras-springsecurity6</artifactId>
      <version>${thymeleaf-extras-springsecurity6.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-docker-compose</artifactId>
      <version>${parent.version}</version>
      <!--      <optional>true</optional>-->
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>${snakeyaml.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>4.2.2</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <version>${parent.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>
<!--      <plugin>-->
<!--        <groupId>org.springframework.boot</groupId>-->
<!--        <artifactId>spring-boot-maven-plugin</artifactId>-->
<!--        &lt;!&ndash;  TODO: below buildpacks configuration appears to (currently) be necessary for JDK22, ref: &ndash;&gt;-->
<!--        &lt;!&ndash;  https://github.com/paketo-buildpacks/bellsoft-liberica/issues/565  &ndash;&gt;-->
<!--&lt;!&ndash;        <configuration>&ndash;&gt;-->
<!--&lt;!&ndash;          <image>&ndash;&gt;-->
<!--&lt;!&ndash;            <env>&ndash;&gt;-->
<!--&lt;!&ndash;              <BP_JVM_VERSION>22</BP_JVM_VERSION>&ndash;&gt;-->
<!--&lt;!&ndash;            </env>&ndash;&gt;-->
<!--&lt;!&ndash;            <buildpacks>&ndash;&gt;-->
<!--&lt;!&ndash;              <buildpack>paketobuildpacks/azul-zulu</buildpack>&ndash;&gt;-->
<!--&lt;!&ndash;              <buildpack>urn:cnb:builder:paketo-buildpacks/syft</buildpack>&ndash;&gt;-->
<!--&lt;!&ndash;              <buildpack>urn:cnb:builder:paketo-buildpacks/executable-jar</buildpack>&ndash;&gt;-->
<!--&lt;!&ndash;              <buildpack>urn:cnb:builder:paketo-buildpacks/spring-boot</buildpack>&ndash;&gt;-->
<!--&lt;!&ndash;            </buildpacks>&ndash;&gt;-->
<!--&lt;!&ndash;            <builder>paketobuildpacks/builder-jammy-base</builder>&ndash;&gt;-->
<!--&lt;!&ndash;          </image>&ndash;&gt;-->
<!--&lt;!&ndash;        </configuration>&ndash;&gt;-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>local</id>
      <properties>
        <spring.profiles.active>local</spring.profiles.active>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <configuration>
              <profiles>
                <profile>local</profile>
              </profiles>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <groupId>com.prosilion.presto.starter</groupId>
          <artifactId>h2db</artifactId>
          <version>${project.version}</version>
          <scope>runtime</scope>
        </dependency>
        <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>${h2.version}</version>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>dev-daemon</id>
      <properties>
        <spring.profiles.active>dev-daemon</spring.profiles.active>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <configuration>
              <profiles>
                <profile>dev-daemon</profile>
              </profiles>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <groupId>com.prosilion.presto.starter</groupId>
          <artifactId>mysql</artifactId>
          <version>${project.version}</version>
          <scope>runtime</scope>
        </dependency>
        <dependency>
          <groupId>com.mysql</groupId>
          <artifactId>mysql-connector-j</artifactId>
          <version>${mysql-connector-j.version}</version>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>dev-docker</id>
      <properties>
        <spring.profiles.active>dev-daemon</spring.profiles.active>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <configuration>
              <profiles>
                <profile>dev-docker</profile>
              </profiles>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <groupId>com.prosilion.presto.starter</groupId>
          <artifactId>mysql</artifactId>
          <version>${project.version}</version>
          <scope>runtime</scope>
        </dependency>
        <dependency>
          <groupId>com.mysql</groupId>
          <artifactId>mysql-connector-j</artifactId>
          <version>${mysql-connector-j.version}</version>
          <scope>runtime</scope>
        </dependency>
      </dependencies>
    </profile>
  </profiles>
</project>
